--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,9 @@ layout: default
                     <h5>{{ page.date | date_to_string }}</h5>
                     <h2>{{ page.title }}</h2>
                     <br />
+                    <div class="post">
                     {{ content }}
+                    </div>
                 </div>
             </div>
         </div>
