--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
                     <h2>{{ page.title }}</h2>
                     <br />
                     
-                    {{ content | markdownify }}
+                    {{ post.content | markdownify }}
                     
                 </div>
             </div>
