--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,35 @@
    
 
   {{ content }}
+  
+  <section id="feature-two" class="feature-dark">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h2>Get in touch</h2><br />
+                    <form action="//formspree.io/aann9007@gmail.com" method="POST" role="form">
+                      <div class="form-group">
+                        <label for="InputName1">Your Name</label>
+                        <input type="text" name="name" id="InputName1" class="form-control">
+                      </div>                    
+                      <div class="form-group">
+                        <label for="InputEmail1">Email address</label>
+                        <input type="email" name="_replyto" id="InputEmail1" class="form-control">
+                      </div>
+                      <div class="form-group">
+                        <input type="hidden" name="_subject" value="Github Contact" class="form-control">
+                      </div>
+                      <div class="form-group">
+                        <label for="message1">Message</label>
+                        <textarea name="message" id="message1" class="form-control" rows="3"></textarea>
+                      </div>
+                      <button type="submit" class="btn btn-primary">Send</button>
+                    </form>
+                    <br /><br />
+                </div>
+            </div>
+        </div>
+    </section>
 
 
   <footer id="main-footer">
