--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ img {
 }
 
 #feature-five {
-    padding-top: 4rem;
+    padding-top: 11.5rem;
 }
 
 #feature-five img {
@@ -135,6 +135,54 @@ a:hover {
     text-decoration: underline; 
 }
 
+/* blog galaxy */
+
+@-webkit-keyframes STAR-MOVE {
+    from {
+        left: 0;
+        top: 0;
+    }
+    to { 
+        left: -10000px;
+        top: -2000px;
+    }
+}
+
+#background {
+    background: black url(../img/background.png) repeat 5% 5%;
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    z-index: 100;
+    
+    -webkit-animation-name: STAR-MOVE;
+    -webkit-animation-duration: 220s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+}
+
+#midground {
+    background: url(../img/midground.png) repeat 20% 20%;
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    z-index: 200;
+    
+    -webkit-animation-name: STAR-MOVE;
+    -webkit-animation-duration: 150s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+}
+
+#foreground {
+    background: url(../img/foreground.png) repeat 35% 35%;
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    z-index: 300;
+    
+    -webkit-animation-name: STAR-MOVE;
+    -webkit-animation-duration: 100s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+}
 
 /* Media Queries */
 
