--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,9 @@
                   <a class="nav-link" href="/">Home </a>
               </li>
               <li class="nav-item">
+                  <a class="nav-link" href="#feature-four">Programming</a>
+              </li>
+              <li class="nav-item">
                   <a class="nav-link" href="#feature-two">Contact</a>
               </li>
               <li class="nav-item">
